--- a/samples/gradient-animation/animation.html
+++ b/samples/gradient-animation/animation.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Fork of Exercise 1: SVG Fundamentals</title>
-    <link href="styles.css" rel="stylesheet" />
+    <title>SVG Sunset</title>
+    <style>
+      body {
+        margin: auto;
+        overflow: hidden;
+      }
+    </style>
   </head>
   <body>
     <svg width="960" height="500" fill="white">
