--- a/index.html
+++ b/index.html
@@ -5,51 +5,97 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <script src="https://unpkg.com/d3@7.3.0/dist/d3.min.js"></script>
     <style>
       body {
         margin: 0;
       }
       svg {
-        border: 1px solid gray;
-      }
-      g {
-        transform: translate(50%, 50%);
+        border: 2px solid gray;
       }
     </style>
   </head>
   <body>
-    <div></div>
+    <div id="root"></div>
 
     <script>
-      const width = window.innerWidth;
-      const height = window.innerHeight;
-      const svg = document.createElementNS("http://www.w3.org/2000/svg", "svg");
-      svg.setAttribute("width", width);
-      svg.setAttribute("height", height);
-      document.body.appendChild(svg);
+      const width = 960;
+      const height = 500;
+      const centerX = width / 2;
+      const centerY = height / 2;
+      const strokeWidth = 20;
+      const eyeOffsetX = 90;
+      const eyeOffsetY = 70;
+      const eyeRadius = 30;
+      const mouthWidth = 100;
+      const mouthRadius = 20;
 
-      const n = 4;
+      const mouthArc = d3
+        .arc()
+        .innerRadius(mouthWidth)
+        .outerRadius(mouthWidth + mouthRadius)
+        .startAngle(Math.PI / 2 + 0.2)
+        .endAngle((Math.PI * 3) / 2 - 0.2);
 
-      for (let i = 0; i < n; i++) {
-        const circle = document.createElementNS(
-          "http://www.w3.org/2000/svg",
-          "circle"
-        );
-        circle.setAttribute("cx", i * 100);
-        circle.setAttribute("cy", Math.random() * 100 + 300);
-        circle.setAttribute("r", Math.random() * 100);
-        circle.setAttribute("fill", "red");
-        svg.appendChild(circle);
-      }
+      const mySVG = `<svg width=${width} height=${height}>
+
+        <g transform=${`translate(${centerX},${centerY})`}>
+      <circle
+        r=${centerY - strokeWidth / 2}
+        fill="yellow"
+        stroke="black"
+        stroke-width=${strokeWidth}
+      />
+      <circle cx=${-eyeOffsetX} cy=${-eyeOffsetY} r=${eyeRadius} />
+      <circle cx=${eyeOffsetX} cy=${-eyeOffsetY} r=${eyeRadius} />
+      <path d="M6 2C10 23 35 66 103 66C171 66 192 23 194 2" stroke="black" stroke-width="12" fill="none" />
+      <path d=${mouthArc()} />
+    </g>
+
+
+    <g transform=${`translate(${centerX},${centerY})`} stroke="black" stoke-width="2">
+      <circle cx="0" cy="0" r="4" />
+      <line x1=${-centerX} x2=${centerX} y1="0" y2="0" />
+      <line x1="0" x2="0" y1=${-centerY} y2=${centerY} />
+    </g>
+    
+      </svg>`;
+
+      const rootElement = document.getElementById("root");
+      rootElement.innerHTML = mySVG;
     </script>
+
+    <!-- <script>
+      const width = 960;
+      const height = 500;
+      const centerX = width / 2;
+      const centerY = height / 2;
+      const strokeWidth = 20;
+      const eyeOffsetX = 90;
+      const eyeOffsetY = 70;
+      const eyeRadius = 32;
+
+      const mySVG = `<svg width=${width} height=${height}>
+        <g transform=${`translate(${centerX},${centerY})`}>
+          <circle
+            r=${centerY - strokeWidth / 2}
+            fill="yellow"
+            stroke="black"
+            stroke-width=${strokeWidth}
+          />
+          <circle cx=${-eyeOffsetX} cy=${-eyeOffsetY} r=${eyeRadius} />
+          <circle cx=${eyeOffsetX} cy=${-eyeOffsetY} r=${eyeRadius} />
+        </g>
+
+        <g transform=${`translate(${centerX},${centerY})`}>
+          <circle cx="0" cy="0" r="4" />
+          <line x1="-480" x2="480" y1="0" y2="0" stroke="black" stroke-width="2" />
+          <line x1="0" x2="" y1="-250" y2="250" stroke="black" stroke-width="2" />
+        </g>
+      </svg>`;
+
+      const rootElement = document.getElementById("root");
+      rootElement.innerHTML = mySVG;
+    </script> -->
   </body>
 </html>
-
-<!-- <circle
-    cx="60"
-    cy="60"
-    r="50"
-    stroke="black"
-    stroke-width="6"
-    fill="green"
-    ></circle> -->
