--- a/samples/smile-done/index.html
+++ b/samples/smile-done/index.html
@@ -12,6 +12,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="scripts.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
