--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <body>
     <div id="root"></div>
 
+    <script src="../samples/color-codes/data.js"></script>
     <script>
       const width = 960;
       const height = 500;
@@ -37,60 +38,10 @@
         .startAngle(Math.PI / 2 + 0.2)
         .endAngle((Math.PI * 3) / 2 - 0.2);
 
-      const mySVG = `
-      <svg width=${width} height=${height}>
-
-        <g transform=${`translate(${centerX},${centerY})`}>
-          <circle
-            r=${centerY - strokeWidth / 2}
-            fill="yellow"
-            stroke="black"
-            stroke-width=${strokeWidth}
-          />
-          <circle cx=${-eyeOffsetX} cy=${-eyeOffsetY} r=${eyeRadius} />
-          <circle cx=${eyeOffsetX} cy=${-eyeOffsetY} r=${eyeRadius} />
-
-
-          <path d="M 117,23 A 120, 120, 0, 0, 1, -117, 23  L -98, 19 A100, 100, 0, 0, 0, 98, 19 Z"></path>
-        </g>
-    
-      </svg>`;
+      const mySVG = ``;
 
       const rootElement = document.getElementById("root");
       rootElement.innerHTML = mySVG;
     </script>
-
-    <!-- <script>
-      const width = 960;
-      const height = 500;
-      const centerX = width / 2;
-      const centerY = height / 2;
-      const strokeWidth = 20;
-      const eyeOffsetX = 90;
-      const eyeOffsetY = 70;
-      const eyeRadius = 32;
-
-      const mySVG = `<svg width=${width} height=${height}>
-        <g transform=${`translate(${centerX},${centerY})`}>
-          <circle
-            r=${centerY - strokeWidth / 2}
-            fill="yellow"
-            stroke="black"
-            stroke-width=${strokeWidth}
-          />
-          <circle cx=${-eyeOffsetX} cy=${-eyeOffsetY} r=${eyeRadius} />
-          <circle cx=${eyeOffsetX} cy=${-eyeOffsetY} r=${eyeRadius} />
-        </g>
-
-        <g transform=${`translate(${centerX},${centerY})`}>
-          <circle cx="0" cy="0" r="4" />
-          <line x1="-480" x2="480" y1="0" y2="0" stroke="black" stroke-width="2" />
-          <line x1="0" x2="" y1="-250" y2="250" stroke="black" stroke-width="2" />
-        </g>
-      </svg>`;
-
-      const rootElement = document.getElementById("root");
-      rootElement.innerHTML = mySVG;
-    </script> -->
   </body>
 </html>
