--- a/samples/mySvg/index.html
+++ b/samples/mySvg/index.html
@@ -50,6 +50,10 @@
           <circle cx=${-eyeOffsetX} cy=${-eyeOffsetY} r=${eyeRadius} />
           <circle cx=${eyeOffsetX} cy=${-eyeOffsetY} r=${eyeRadius} />
 
+          <circle cx=${
+            -eyeOffsetX + 20
+          } cy=${-eyeOffsetY} r="10" fill="white" />
+
           <path d=${mouthArc()} />
         </g>
 
